# eos-app-useless

./: .gitignore  README.md  dev_run.sh
src/: CMakeLists.txt  main.c
src/Apps/Reader/: CMakeLists.txt  app_reader.c  reader_bookmark.c  reader_bookmark.h  reader_core.c  reader_core.h  reader_port.c  reader_port.h
src/Apps/Settings/: CMakeLists.txt  app_settings.c  app_settings.h
src/Apps/VGP/: CMakeLists.txt  app_vgp.c  app_vgp.h  context.c  context.h  coremark.c  mvgp_impl_0001.c  mvgp_impl_0001.h  mvgp_impl_0002.c  mvgp_impl_0002.h  mvgp_impl_0003.c  mvgp_impl_0003.h  mvgp_impl_0004.c  mvgp_impl_0004.h  vgp_config.h  vscreen.c  vscreen.h
src/Apps/VGP/wasm3/: CMakeLists.txt  m3_config.h
src/Corelib/: _core_config.h  debug.c  debug.h  llapi.c  llapi.h
src/Fs/: fs_utils.c  fs_utils.h  lfs.h  sys_conf.c
src/Graphic/: bmfont.c  bmfont.h  font16x16.h  font8x8.c  font8x8.h  screen.c  screen.h
src/Graphic/UI/: ui_dialog.c  ui_input_number.c  ui_menu.c  ui_sysbar.c  ui_sysbar.h  ui_utils.c  ui_utils.h
src/Keyboard/: keyboard.c  keyboard.h
src/Time/: sys_clock.c  sys_clock.h
src/Utils/: u8str.h
